new format for derivations extractor output #84